# university_

./: AddEmployee.hpp  AddStudent.hpp  CMakeLists.txt  Command.hpp  DisplayDatabase.hpp  Employee.cpp  Employee.hpp  Exit.hpp  Find.hpp  ImportExport.hpp  Mysql.cpp  Mysql.hpp  MysqlDb.hpp  Person.cpp  Person.hpp  README.md  Remove.hpp  SortDatabase.hpp  Student.cpp  Student.hpp  University.cpp  University.hpp  db.cpp  db.hpp  db.txt
src/: AddStudent.hpp  Command.hpp  DisplayDatabase.hpp  Employee.hpp  Find.hpp  Person.cpp  Person.hpp  SortDatabase.hpp  Student.cpp  University.cpp  main.cpp
tests/: catch_amalgamated.cpp  test-employee.cpp  test-person.cpp  test-university.cpp
